--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div class="navbar__bars"><i class="fas fa-bars"></i></div>
       <div class="navbar__menu">
         <a href="/" class="navbar__menu--links">Home</a>
-        <a href="/" class="navbar__menu--links">Products</a>
+        <a href="/" class="navbar__menu--links">Menu</a>
         <a href="/" class="navbar__menu--links">Services</a>
         <a href="/" class="navbar__menu--links" id="button">Sign Up</a>
       </div>
@@ -29,14 +29,14 @@
     <div class="hero">
       <div class="hero__container">
         <div class="hero__container--left">
-          <h1>They are coming</h1>
-          <h2>Be Prepared</h2>
-          <p>Sign up now to join the list.</p>
+          <h1>It's Not Just Coffe</h1>
+          <h2>It's Starbucks</h2>
+          <p>No elitr et sanctus justo erat gubergren lorem. Sed lorem ea clita.</p>
           <button class="hero__container--btn"><a href="#">Sign Up</a></button>
         </div>
         <div class="hero__container--right">
           <img
-            src="images/img-2.svg"
+            src="images/img3.png"
             alt="alien"
             class="hero__container--img"
           />
