--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <!-- Navbar Section -->
     <nav class="navbar">
-      <a href="/" class="navbar__logo">SASS</a>
+      <a href="/" class="navbar__logo">Starbucks</a>
       <div class="navbar__bars"><i class="fas fa-bars"></i></div>
       <div class="navbar__menu">
         <a href="/" class="navbar__menu--links">Home</a>
